--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -1,8 +1,12 @@
 ---
-- name: Assert usage of systemd as an init system
-  assert:
-    that: ansible_service_mgr == 'systemd'
-    msg: "This role only works with systemd"
+#- name: Assert usage of systemd as an init system
+#  assert:
+#    that: ansible_service_mgr == 'systemd'
+#    msg: "This role only works with systemd"
+
+- debug:
+    msg: ansible_service_mgr =  [{{ ansible_service_mgr }}]
+
 
 - name: Get systemd version
   command: systemctl --version
@@ -11,10 +15,12 @@
   register: __systemd_version
   tags:
     - skip_ansible_lint
+  when: ansible_service_mgr == 'systemd'  
 
 - name: Set systemd version fact
   set_fact:
     node_exporter_systemd_version: "{{ __systemd_version.stdout_lines[0] | regex_replace('^systemd\\s(\\d+).*$', '\\1') }}"
+  when: ansible_service_mgr == 'systemd'
 
 - name: Naive assertion of proper listen address
   assert:
