--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,7 +7,28 @@
     group: root
     mode: 0644
   notify: restart node_exporter
+  when: ansible_service_mgr == 'systemd'
 
+- name: "Ensure Node Exporter log file ({{ _node_exporter_log_file }}) exists and has the correct permissions" 
+  file:
+    path: "{{ _node_exporter_log_file }}"
+    state: touch
+    mode: u+rw,g-wx,o-
+    modification_time: preserve
+    access_time: preserve
+    owner: "{{ _node_exporter_system_group }}"
+    group: "{{ _node_exporter_system_user }}"
+
+- name: Copy the Node Exporter upstart service file
+  template:
+    src: node_exporter.j2
+    dest: /etc/init.d/node_exporter
+    owner: root
+    group: root
+    mode: 0755
+  notify: restart node_exporter
+  when: ansible_service_mgr == 'upstart'
+  
 - name: Create textfile collector dir
   file:
     path: "{{ node_exporter_textfile_dir }}"
