--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,8 +24,8 @@
 
 - name: Ensure Node Exporter is enabled on boot
   become: true
-  systemd:
-    daemon_reload: true
+  service:
+    # daemon_reload: true
     name: node_exporter
     enabled: true
     state: started
