--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,8 @@ go_arch: "{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }
 _node_exporter_binary_install_dir: "/usr/local/bin"
 _node_exporter_system_group: "node-exp"
 _node_exporter_system_user: "{{ _node_exporter_system_group }}"
+
+# Added for rhel6
+_node_exporter_log_dir: "/var/log"
+_node_exporter_log_file: "{{ _node_exporter_log_dir }}/node_exporter.log"
+
