--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,10 @@ node_exporter_binary_local_dir: ""
 node_exporter_web_listen_address: "0.0.0.0:9100"
 
 node_exporter_textfile_dir: "/var/lib/node_exporter"
+node_exporter_textfile_dir_user: "{{ _node_exporter_system_user }}"
+node_exporter_textfile_dir_group: "root"
+node_exporter_textfile_dir_access: "0775"
+
 
 node_exporter_enabled_collectors:
   - systemd
